create desctop about page

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: YokogawaElectric OGH-33456
+title: Контрольно измерительное оборудование
 ---
 
 <div class="breadcrumb-wrapper">
