added mobile version for about page

--- a/src/about.html
+++ b/src/about.html
@@ -16,6 +16,7 @@ title: О компании
 
 <div class="aboutPage">
     <div class="container">
+        <h1 class="page-heading">О компании</h1>
         <div class="aboutPage__inner">
             <div class="aboutPage-intro">
                 <svg class="aboutPage-intro__logo">
@@ -33,6 +34,7 @@ title: О компании
 <div class="aboutPage-team">
     <div class="container">
         <div class="aboutPage-team__inner">
+            <div class="aboutPage-team__info-heading aboutPage-team__info-heading--mob">NORDWEX — молодая, амбициозная команда</div>
             <div class="aboutPage-team__wrapper">
                 <div class="aboutPage-team__item">
                     <img class="aboutPage-team__item-img" src="assets/images/about-page/team-1.png" alt="">
