--- a/src/article.html
+++ b/src/article.html
@@ -288,6 +288,11 @@ title: article
     Технические характеристики
 </div>
 
+<div class="specificationsBannerMobile">
+    <div class="specificationsBannerMobileText">Технические характеристики</div>
+    <div><img src="./assets/images/article/arrowUp.svg" alt="#"></div>
+</div>
+
 <div class="specificationsContainer">
     <table class="main">
         <thead>
