--- a/src/article.html
+++ b/src/article.html
@@ -7,7 +7,7 @@ title: article
     <div class="container">
         <nav aria-label="breadcrumb" class="breadcrumb">
             <a href="#">Главная</a>
-            <span aria-current="page">Статья</span>
+            <span aria-current="page"><a href="#">Статья</a></span>
         </nav>
     </div>
 </div>
