--- a/src/brandsSecondLevel.html
+++ b/src/brandsSecondLevel.html
@@ -36,48 +36,50 @@ title: brandsSecondLevel
 <div class="productsControlPanel">
     <div class="helpPositionContainer">
         <div class="leftControllPanelContainer">
-            <div class="controlTitle">
+            <button class="controlTitle" data-tab="#tab_1">
                 <div class="controlPanelImgContainer">
                     <img src="./assets/images/brands/brandsIco/wheel (Traced).svg" alt="#">
                 </div>
                 <div class="controlText">
                     Контрольно-измерительные приборы
                 </div>
-            </div>
-            <div class="controlTitle">
+            </button>
+            <button class="controlTitle" data-tab="#tab_2">
                 <div class="controlPanelImgContainer">
                     <img src="./assets/images/brands/brandsIco/control (Traced).svg" alt="#">
                 </div>
                 <div class="controlText">
                     Автоматизация и роботизация
                 </div>
-            </div>
-            <div class="controlTitle">
+            </button>
+            <button class="controlTitle" data-tab="#tab_3">
                 <div class="controlPanelImgContainer">
                     <img src="./assets/images/brands/brandsIco/3d-printer (Traced).svg" alt="#">
                 </div>
                 <div class="controlText">
                     Метрологическое и лабораторно оборудование
                 </div>
-            </div>
-            <div class="controlTitle">
+            </button>
+            <button class="controlTitle" data-tab="#tab_4">
                 <div class="controlPanelImgContainer">
                     <img src="./assets/images/brands/brandsIco/control (1) (Traced).svg" alt="#">
                 </div>
                 <div class="controlText">
                     Аналитическое оборудование
                 </div>
-            </div>
-            <div class="controlTitle">
+            </button>
+            <button class="controlTitle" data-tab="#tab_5">
                 <div class="controlPanelImgContainer">
                     <img src="./assets/images/brands/brandsIco/gauge (Traced).svg" alt="#">
                 </div>
                 <div class="controlText">
                     Неразрушащий контроль
                 </div>
-            </div>
+            </button>
         </div>
-        <div class="radioCotainer">
+
+        
+        <div class="radioCotainer" id="tab_1">
             <div class="radioElementContainer">
                 <input class="radioElement" id="radioElemId1" type="radio" name="category">
                 <label for="radioElemId1">Расходомеры</label>
@@ -115,8 +117,164 @@ title: brandsSecondLevel
                 <label for="radioElemId9">Измерение давления</label>
             </div>
         </div>
+
+        <div class="radioCotainer" id="tab_2">
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId21" type="radio" name="category">
+                <label for="radioElemId21">222222222222</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId22" type="radio" name="category">
+                <label for="radioElemId22">Измерение температуры</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId23" type="radio" name="category">
+                <label for="radioElemId23">Измерение влажности</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId24" type="radio" name="category">
+                <label for="radioElemId24">Измерительное оборудование</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId25" type="radio" name="category">
+                <label for="radioElemId25">Измерение уровня</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId26" type="radio" name="category">
+                <label for="radioElemId26">Плотномеры</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId27" type="radio" name="category">
+                <label for="radioElemId27">Калибровочная техника</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId28" type="radio" name="category">
+                <label for="radioElemId28">Измерение силы</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId29" type="radio" name="category">
+                <label for="radioElemId29">Измерение давления</label>
+            </div>
+        </div>
+
+        <div class="radioCotainer" id="tab_3">
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId31" type="radio" name="category">
+                <label for="radioElemId31">3333333333</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId32" type="radio" name="category">
+                <label for="radioElemId32">Измерение температуры</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId33" type="radio" name="category">
+                <label for="radioElemId33">Измерение влажности</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId34" type="radio" name="category">
+                <label for="radioElemId34">Измерительное оборудование</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId35" type="radio" name="category">
+                <label for="radioElemId35">Измерение уровня</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId36" type="radio" name="category">
+                <label for="radioElemId36">Плотномеры</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId37" type="radio" name="category">
+                <label for="radioElemId37">Калибровочная техника</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId38" type="radio" name="category">
+                <label for="radioElemId38">Измерение силы</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId39" type="radio" name="category">
+                <label for="radioElemId39">Измерение давления</label>
+            </div>
+        </div>
+
+        <div class="radioCotainer" id="tab_4">
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId41" type="radio" name="category">
+                <label for="radioElemId41">4444444444</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId42" type="radio" name="category">
+                <label for="radioElemId42">Измерение температуры</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId43" type="radio" name="category">
+                <label for="radioElemId43">Измерение влажности</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId44" type="radio" name="category">
+                <label for="radioElemId44">Измерительное оборудование</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId45" type="radio" name="category">
+                <label for="radioElemId45">Измерение уровня</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId46" type="radio" name="category">
+                <label for="radioElemId46">Плотномеры</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId47" type="radio" name="category">
+                <label for="radioElemId47">Калибровочная техника</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId48" type="radio" name="category">
+                <label for="radioElemId48">Измерение силы</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId49" type="radio" name="category">
+                <label for="radioElemId49">Измерение давления</label>
+            </div>
+        </div>
+
+        <div class="radioCotainer" id="tab_5">
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId51" type="radio" name="category">
+                <label for="radioElemId51">5555555</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId52" type="radio" name="category">
+                <label for="radioElemId52">Измерение температуры</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId53" type="radio" name="category">
+                <label for="radioElemId53">Измерение влажности</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId54" type="radio" name="category">
+                <label for="radioElemId54">Измерительное оборудование</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId55" type="radio" name="category">
+                <label for="radioElemId55">Измерение уровня</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId56" type="radio" name="category">
+                <label for="radioElemId56">Плотномеры</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId57" type="radio" name="category">
+                <label for="radioElemId57">Калибровочная техника</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId58" type="radio" name="category">
+                <label for="radioElemId58">Измерение силы</label>
+            </div>
+            <div class="radioElementContainer">
+                <input class="radioElement" id="radioElemId59" type="radio" name="category">
+                <label for="radioElemId59">Измерение давления</label>
+            </div>
+        </div>
+
     </div>
-    
 
 </div>
 
