first_fix_test_commit

--- a/src/article.html
+++ b/src/article.html
@@ -139,7 +139,9 @@ title: article
                 <img src="./assets/images/article/sliderElem.svg" alt="#">
             </div>
           </div>
+          
         </div>
+        <div class="swiper-pagination"></div>
         <div class="sliderTextContainer">
             <div class="arrowNavContainer">
                 <div class="arrrowNavHelpContainer">
@@ -174,7 +176,7 @@ title: article
     </div>
 
 
-    <div class="swiper mySwiperMobile">
+    <!-- <div class="swiper mySwiperMobile">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div>
@@ -206,7 +208,7 @@ title: article
                 </p>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="subtitleBannerContainer">
         <div class="product-section__heading">
